#
#	Copyright (c) Laurent Winkler 2019
#
#	Distributed under the Boost Software License, Version 1.0. (See accompanying
#	file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
#   
add_subdirectory(chat)

add_subdirectory(ping_pong)
add_subdirectory(templates)
add_subdirectory(word_list_game)

