#
#	Copyright (c) Laurent Winkler 2019
#
#	Distributed under the Boost Software License, Version 1.0. (See accompanying
#	file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
#   
#	Code samples adapted from the POP-C++ project (https://github.com/pop-team/pop-cpp).
#
add_subdirectory(asynccreation)
add_subdirectory(bigdata)
add_subdirectory(callback)
add_subdirectory(exception)
add_subdirectory(heritage)
add_subdirectory(stresstest)
add_subdirectory(stdlib)
add_subdirectory(tree)

